# height-calculator-fot-docker

./: CMakeLists.txt  Dockerfile  docker_test  dockerfile_test_for_jenkins  run_height_calculator.sh
tests/: CMakeLists.txt  Makefile  test_calculator.cpp  test_runner.cpp  tst_mainwindow.cpp
